--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -120,7 +120,7 @@
                                 <p><strong>Contributors:</strong> Salma Abumeeiz, Giselle Burns, Juan Díaz, Taylor Harper, Royson Lin, Christopher Lopez, Renee Romero, Hannah Sutherland, April Zhou</p>
                                 <h4>Additional Resources</h4>
                                 <ul>
-                                    <li><a href="https://teachcreate.org/" target="_blank">Teach C.R.E.A.T.E.</a></li>
+                                    <li><a href="https://web.archive.org/web/20230422193816/https://teachcreate.org/" target="_blank">Teach C.R.E.A.T.E.</a></li>
                                     <li><a href="https://uclalibrary.github.io/research-tips/" target="_blank">WI+RE (Writing Instruction + Research Education)</a></li>
                                     <li>Links to assessment and literature coming soon!</li>
                                 </ul>
